src/objects/Refined_pricebook_items__c.object
<CustomObject>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Refined pricebook items</relationshipLabel>
        <relationshipName>Refined_pricebook_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Local SKU</value>
            </filterItems>
            <filterItems>
                <field>Product2.Market__c</field>
                <operation>equals</operation>
                <valueField>$User.Market__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Refined pricebook items</relationshipLabel>
        <relationshipName>Refined_pricebook_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product bundle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Price_Book__c</field>
                <operation>equals</operation>
                <valueField>Product_bundle__c.Price_Book__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_bundle__c</referenceTo>
        <relationshipLabel>Refined pricebook items</relationshipLabel>
        <relationshipName>Refined_pricebook_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refined_pricebook_type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refined pricebook type</label>
        <referenceTo>Refined_pricebook_type__c</referenceTo>
        <relationshipLabel>Refined pricebook items</relationshipLabel>
        <relationshipName>Refined_pricebook_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Refined pricebook item</label>
    <nameField>
        <displayFormat>RPI-{0000}</displayFormat>
        <label>Refined pricebook item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refined pricebook items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>